<package format="2">
  <name>qa01</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for qa01</p>
    <p>This package contains configuration data, 3D models and launch files for qa01 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>hardward_interface</buildtool_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
