<?xml version="1.0"?>
<package format="2">
    <name>go1_description</name>
    <version>0.0.0</version>
    <description>The go1_description package</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <license>Apache</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roslaunch</depend>
    <depend>robot_state_publisher</depend>
    <depend>rviz</depend>
    <depend>joint_state_publisher_gui</depend>
    <depend>gazebo</depend>
    <export>
        <architecture_independent />
    </export>
</package>