<?xml version="1.0"?>
<package format="2">
    <name>wl_description</name>
    <version>0.0.0</version>
    <description>The wl_description package</description>

    <maintainer email="zh2362207401@gmail.com">WL</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>